add allow headers